# konte

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PRD.md  README.md  TASKS.md  high_level_system_flowchart.md  low_level_system_flowchart.md  pyproject.toml
docs/: AGENT_INTEGRATION_GUIDE.md  knowledge_base_analysis.md
evaluation/: EVALUATION_GUIDE.md  EVALUATION_REPORT.md  SINGAPORE_HS_CODE_REPORT.md  __init__.py  custom_llm.py  custom_metrics.py  deepeval_synthesizer.py  evaluate_modes.py  run_evaluation.py  run_metrics_only.py  synthesize_dataset.py  synthesize_korean_dataset.py  synthesize_singapore_dataset.py  test_dataset.py
evaluation/data/: enriched_test_cases.json
evaluation/debug/: ANALYSIS_SUMMARY.md  FAILURE_ROOT_CAUSE.md  FINDINGS.md  investigate_failures.py
evaluation/experiments/: ablation_case1_perfect_evidence.py  ablation_case1b_raw_evidence.py  ablation_case2_evidence_injection.py  ablation_case2b_raw_injection.py  analyze_failures.py  (+17 more)
examples/: async_reranking.py  basic_usage.py  demo_source_filter_and_regex.py  metadata_filtering.py  parallel_multi_project_retrieval.py  query_with_answer.py
experiments/: build_baseline_only.py  build_experimental_projects.py  build_simple_rag_baseline.py  evaluate_experiments.py
konte/: __init__.py  bm25_store.py  chunker.py  context.py  faiss_store.py  generator.py  loader.py  manager.py  models.py  project.py  query_processor.py  retriever.py  settings.py
prompts/: context_prompt.txt  context_prompt_extended.txt
scripts/: build_baseline_project.py  build_combined_project.py  build_knowledge_bases.py  build_singapore_hs_code.py  build_tariff_project.py  build_wco_feb2026.py  rebuild_wco_korean.py  restart_servers.sh
tests/: conftest.py
(+53 files in other folders)
