[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "konte"
version = "0.1.0"
description = "Contextual RAG library with hybrid retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sergey Leksikov"}
]
keywords = ["rag", "retrieval", "llm", "embeddings", "faiss", "bm25"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "tiktoken>=0.5.0",
    "aiofiles>=24.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
konte = "konte.cli.app:main"

[project.urls]
Homepage = "https://github.com/sergeyleksikov/contextual_rag"

[tool.setuptools.packages.find]
where = ["."]
include = ["konte*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (mocks allowed)",
    "integration: Integration tests (real API calls)",
    "e2e: End-to-end tests (slow, real API calls, full workflows)",
]
